# CaNNy_EdgeDetection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionapp/: CameraHelper.kt  GLRenderer.kt  ImageUtils.kt  MainActivity.kt
app/src/main/java/com/example/edgedetectionapp/ui/theme/: Theme.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  styles.css  viewer.js  viewer.ts
